--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
   "author": "Viktor Riabkov <victor.ryabkov.business@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc",
+    "build": "dotenvx run -- node esbuild.mjs",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "dotenvx run -- ts-node src/index.ts",
+    "lint": "eslint 'src/**/*.ts'",
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.14.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "esbuild": "^0.23.1",
     "eslint": "^9.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
