--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,4 +20,7 @@ jobs:
         run: yarn -v
 
       - name: Install deps
-        run: yarn
+        run: yarn install --frozen-lockfile
+
+      - name: Run lint
+        run: yarn lint
