--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "git@github.com:moiskillnadne/mail_server.git",
   "author": "Viktor Riabkov <victor.ryabkov.business@gmail.com>",
   "license": "MIT",
+  "packageManager": "yarn@1.22.22",
   "scripts": {
     "build": "dotenvx run -- node esbuild.mjs",
     "start": "node dist/index.js",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.14.1",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.21.0"
   },
   "devDependencies": {
@@ -23,13 +25,9 @@
     "@typescript-eslint/parser": "^8.6.0",
     "esbuild": "^0.23.1",
     "eslint": "^9.10.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
