Update version and deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,4 @@ jobs:
             nvm install
             yarn install --frozen-lockfile
             yarn build
+            pm2 restart /root/apps/mailserver/dist/index.js
