--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write 'src/**/*.ts'"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.658.1",
     "@dotenvx/dotenvx": "^1.14.1",
+    "zod": "^3.23.8",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.21.0"
   },
